# Problem-Solving-MAP

./: .gitignore  README.md  requirements.txt
Projet/: RandomAlgorithms.ipynb
TP1_Eigenvalue/: Eigenvalue.ipynb
TP2_Compression_Jpeg/: Compression_Jpeg_.ipynb
TP3_Bandits_Renforcement/: Bandits_Renforcement.ipynb
TP4_Tri_Randomisé/: AlgorithmesRandomises.ipynb
TP5_Maillage/: Maillage.ipynb
TP6_Arret_Optimal/: Arret_Optimal.ipynb
TP7_Eqn_Eikonale/: Eqn_Eikonal.ipynb
jupyter-exporter/: .gitignore  LICENSE  README.md  analyze_refs.py  check_ref_contents.py  debug_removal.py  pyproject.toml  requirements.txt
jupyter-exporter/case/: RandomAlgorithms.html  RandomAlgorithms.ipynb  config_RandomAlgorithms.yaml
jupyter-exporter/examples/: demo_notebook_full.ipynb  example_config.yaml  example_notebook.ipynb
jupyter-exporter/ipynb_smart_exporter/: __init__.py  cli.py  config.py  converter_html.py  converter_pdf.py  metadata.py  preprocessor.py
jupyter-exporter/ipynb_smart_exporter/css/: base.css  code_formatting.css  document_structure.css  premium_typography.css
jupyter-exporter/ipynb_smart_exporter/templates/: base_template.html
jupyter-exporter/ipynb_smart_exporter/utils/: cell_operations.py  document_structure.py  latex_svg.py  logging_util.py  notebook_loader.py  output_filter.py  reference_manager.py
jupyter-exporter/tests/: test_actual_cell.py  test_font.html  test_full_pipeline.py  test_html_converter.py  test_pattern.py  test_pdf_converter.py  test_preprocessor.py
jupyter-exporter/tests/resources/: tiny_notebook.ipynb
(+1 files in other folders)
